# clan-core

./: .env.template  .envrc  .gitignore  .gitmodules  .rumdl.toml  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  _typos.toml  apps.nix  devShell-python.nix  devShell.nix  eval-options.sh  flake.nix  formatter.nix  hidden-announce.nix  hidden-ssh-announce.nix  installer.nix  inventory.json  module.nix  options.nix  packages.nix  pyproject.toml  renovate.json  test_host_interface.py
.gitea/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.gitea/workflows/: build-clan-app-darwin.yml  build.yaml  check.yaml  checks-impure.yaml  checks.yaml  (+14 more)
checks/: clan-core-for-checks.nix  flake-module.nix  schema.nix  schemas.nix
checks/installation/: facter-report.nix  flake-module.nix  flake.nix  installation-machine.nix  pyproject.toml  shitty.md  test-helpers.nix
checks/installation/nixos_test_lib/: environment.py  nix_setup.py  ssh.py
checks/lib/container-driver/: module.nix  package.nix  pyproject.toml  test-script-prepend.py
checks/lib/container-driver/test_driver/: __init__.py  logger.py
clanModules/: borgbackup.nix  deltachat.nix  dino.nix  diskLayouts.nix  ejabberd.nix  ergochat.nix  flake-module.nix  graphical.nix  localbackup.nix  localsend.nix  matrix-synapse.nix  moonlight.nix  nextcloud.nix  postgresql.nix  prosody.nix  root-password.nix  sshd.nix  sunshine.nix  syncthing.nix  thelounge.nix  vm-user.nix  waypipe.nix  xfce-vm.nix  zerotier.nix  zt-tcp-relay.nix
clanServices/: flake-module.nix
darwinModules/: hosts.nix
decisions/: 01-ClanModules.md  02-clan-api.md  03-adr-numbering-process.md  README.md
devFlake/: flake-compat.nix  flake.nix  private.narHash  update-private-narhash
docs/: .envrc  .gitignore  CONTRIBUTING.md  README.md  clan-config.md  contributing.md  default.nix  deploy-docs.nix  edit_hook.py  flake-module.nix  machines.md  main.py  migrate.py  mkdocs.yml  quickstart.md  release-notes.md  secrets-management.md  shell.nix  testing.md  zerotier.md
flake-parts/: formatting.nix  installer.nix  modules.nix  nixosModules.nix  packages.nix  pre-commit.nix
flakeModules/: clan-config.nix  clan.nix  demo_iso.nix  flake-module.nix
inventory/: README.md  default.nix  example_flake.nix  flake-module.nix  inventory.json
lib/: README.md  default.nix  description.nix  dir_test.nix  docs.nix  evalService.nix  exports.nix  facts.nix  flake-inputs.nix  flake-module.nix  flakes.nix  get-public-value.nix  lib-clan-tests.nix  new_exports.nix  select.nix  test_buildScopeKey.nix  test_simple.nix  tests.nix  vars.nix
modules/: eval-docs.nix  flake-module.nix  hidden-ssh-announce.nix  installer.nix
nixosModules/: bcachefs.nix  flake-module.nix  hidden-ssh-announce.nix
pkgs/: flake-module.nix
scripts/: backport-pr  ci  fmt-nix-codeblocks.py  lint-cross-compat.sh  pre-commit
site/: .gitignore  default.nix  package-lock.json  package.json  svelte.config.js  vite.config.ts
templates/: default.nix  flake-module.nix  flake.nix
templates/python-project/: default.nix  flake-module.nix  pyproject.toml  shell.nix
templates/python-project/my_lib/: __init__.py
templates/python-project/my_tool/: __init__.py
templates/python-project/tests/: conftest.py  test_cli.py  test_detect_git_repo.py
(+3682 files in other folders)
