[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nixos-test-driver"
version = "0.0.0"

[project.scripts]
nixos-test-driver = "test_driver:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
test_driver = ["py.typed"]
[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
